testsuite/gnatprove/tests/586__access_conversion/test.out
test.adb:6:12: error: type invariant in a nested package is not yet supported
test.adb:10:42: error: "P" is not allowed in SPARK
test.adb:10:42: error: violation of aspect SPARK_Mode at line 1
gnatprove: error during flow analysis and proof
